<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="40dp"
    tools:context=".UpdateActivity"
    android:background="@color/off_white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editContact"
        android:textSize="30sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/update_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/red_border"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/update_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/red_border"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/update_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/red_border"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-black"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="20dp"/>

</LinearLayout>